--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -79,6 +79,8 @@
     }
 
     $(document).ready(function(){
+        $("#li_fund_wallet").addClass('mm-active');
+
         var dtbl_fund_wallet_statements = $("#tbl_fund_wallet_statements").DataTable({
             "dom": 'rtip',
             "processing": true,
