--- a/app/admin/templates/admin/admin_header.html
+++ b/app/admin/templates/admin/admin_header.html
@@ -4,10 +4,10 @@
         <div class="header__pane ml-auto">
             <div>
                 <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
-                        data-class="closed-sidebar">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
+                    data-class="closed-sidebar">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
                 </button>
             </div>
         </div>
@@ -15,44 +15,30 @@
     <div class="app-header__mobile-menu">
         <div>
             <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
             </button>
         </div>
     </div>
     <div class="app-header__menu">
-                <span>
-                    <button type="button"
-                            class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                        <span class="btn-icon-wrapper">
-                            <i class="fa fa-ellipsis-v fa-w-6"></i>
-                        </span>
-                    </button>
+        <span>
+            <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+                <span class="btn-icon-wrapper">
+                    <i class="fa fa-ellipsis-v fa-w-6"></i>
                 </span>
+            </button>
+        </span>
     </div>
     <div class="app-header__content">
         <div class="app-header-left">
             <div class="search-wrapper">
                 <div class="input-holder">
                     <input type="text" class="search-input" placeholder="Type to search">
-                    <button class="search-icon"><span></span></button>
+                    <button disabled class="search-icon"><span></span></button>
                 </div>
                 <button class="close"></button>
             </div>
-            <!-- NAVIGATION FOR MODULES -->
-            <ul class="header-menu nav">
-            {% for module in MODULES %}
-                {% if not module.background_app %}
-                <li id="module_header_{{module.module_name}}" class="nav-item">
-                    <a href="{{ url_for(module.module_link) }}" class="nav-link">
-                        <i class="nav-link-icon fa {{ module.module_icon }} {% if module.module_name == VDATA['module'].module_name %}icon-gradient bg-love-kiss{% endif %}"> </i>
-                        {{ module.module_short_description }}
-                    </a>
-                </li>
-                {% endif %}
-            {% endfor %}
-            </ul>
         </div>
         <div class="app-header-right">
             <div class="header-btn-lg pr-0">
@@ -63,14 +49,15 @@
                             <div class="btn-group">
                                 <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
                                     <img width="42" class="rounded-circle"
-                                         src="{{url_for('bp_auth.static', filename=current_user.image_path)}}" alt="">
+                                        src="{{url_for('bp_auth.static', filename=current_user.image_path)}}" alt="">
                                     <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                 </a>
                                 <div tabindex="-1" role="menu" aria-hidden="true"
-                                     class="dropdown-menu dropdown-menu-right">
+                                    class="dropdown-menu dropdown-menu-right">
                                     <!-- <a href="{{ url_for('bp_auth.edit_user',oid=UID) }}"
                                        class="dropdown-item">User Account</a> -->
-                                    <button disabled type="button" tabindex="0" class="dropdown-item">User Account</button>
+                                    <button disabled type="button" tabindex="0" class="dropdown-item">User
+                                        Account</button>
                                     <a href="{{ url_for('bp_auth.logout') }}" class="dropdown-item">Log out</a>
                                 </div>
                             </div>
