--- a/prime_admin/templates/lms/buy_items.html
+++ b/prime_admin/templates/lms/buy_items.html
@@ -1,5 +1,75 @@
 {% extends "admin/admin_base.html" %}
 
+
+{% block scripts %}
+<script>
+    $(document).ready(function(){
+        $("#li_buy_items").addClass('mm-active');
+
+        var dtbl_search = $("#tbl_mdl_clients").DataTable({
+            "pageLength": 10,
+            "columnDefs": [
+                {
+                    "targets": 0,
+                    "visible": false,
+                },
+            ],
+            "ajax": {
+                "url": "/learning-management/api/dtbl/registered-students",
+            }
+        });
+    
+        $('#btn_confirm').click( function () {
+            var selected = dtbl_search.row('.selected').data();
+            
+            $.ajax({
+                url: '/learning-management/api/clients/' + selected[0],
+                type: "GET",
+                contentType: "application/json; charset=utf-8",
+                success: function(response) {
+                    console.log(response)
+                    $("#client_id").val(response.data.id);
+                    $("#branch_id").val(response.data.branch);
+                    $("#registration_no").val(response.data.registration_no);
+                    $("#branch").val(response.data.branch_name);
+                    $("#full_name").val(response.data.fname + " " + response.data.mname + " " + response.data.lname);
+                    $("#batch").val(response.data.batch_number);
+                    $("#schedule").val(response.data.schedule);
+                    $("#status").val(response.data.payment_status);
+                }
+            });
+        });
+
+        $('#tbl_mdl_clients tbody').on( 'click', 'tr', function () {
+            if ( $(this).hasClass('selected') ) {
+                $(this).removeClass('selected');
+            }
+            else {
+                dtbl_search.$('tr.selected').removeClass('selected');
+                $(this).addClass('selected');
+            }
+        } );
+    
+        $('#tbl_items').on('change', 'input', function () {
+            var row = $(this).closest("tr");
+            var cost = row.find('.price').val();
+            var qty = row.find('.qty').val();
+            var amount = parseFloat(qty) * parseFloat(cost);
+            row.find('.sub_total').val(amount.toFixed(2));
+    
+            var total = 0;
+            $('#tbl_items > tbody > tr').each(function () {
+                var sub_total = parseFloat($(this).find(".sub_total").val());
+                total += sub_total;
+            });
+    
+            $("#total").val(total);
+        });
+    });
+</script>
+{% endblock %}
+
+
 {% block content %}
 <div class="app-main__inner">
     <div class="app-page-title" style="background-color: skyblue">
@@ -181,71 +251,4 @@
         display: none;
     }
 </style>
-{% endblock %}
-
-
-{% block scripts %}
-<script>
-    $(document).ready(function(){
-        var dtbl_search = $("#tbl_mdl_clients").DataTable({
-            "pageLength": 10,
-            "columnDefs": [
-                {
-                    "targets": 0,
-                    "visible": false,
-                },
-            ],
-            "ajax": {
-                "url": "/learning-management/api/dtbl/registered-students",
-            }
-        });
-    
-        $('#btn_confirm').click( function () {
-            var selected = dtbl_search.row('.selected').data();
-            
-            $.ajax({
-                url: '/learning-management/api/clients/' + selected[0],
-                type: "GET",
-                contentType: "application/json; charset=utf-8",
-                success: function(response) {
-                    console.log(response)
-                    $("#client_id").val(response.data.id);
-                    $("#branch_id").val(response.data.branch);
-                    $("#registration_no").val(response.data.registration_no);
-                    $("#branch").val(response.data.branch_name);
-                    $("#full_name").val(response.data.fname + " " + response.data.mname + " " + response.data.lname);
-                    $("#batch").val(response.data.batch_number);
-                    $("#schedule").val(response.data.schedule);
-                    $("#status").val(response.data.payment_status);
-                }
-            });
-        });
-
-        $('#tbl_mdl_clients tbody').on( 'click', 'tr', function () {
-            if ( $(this).hasClass('selected') ) {
-                $(this).removeClass('selected');
-            }
-            else {
-                dtbl_search.$('tr.selected').removeClass('selected');
-                $(this).addClass('selected');
-            }
-        } );
-    
-        $('#tbl_items').on('change', 'input', function () {
-            var row = $(this).closest("tr");
-            var cost = row.find('.price').val();
-            var qty = row.find('.qty').val();
-            var amount = parseFloat(qty) * parseFloat(cost);
-            row.find('.sub_total').val(amount.toFixed(2));
-    
-            var total = 0;
-            $('#tbl_items > tbody > tr').each(function () {
-                var sub_total = parseFloat($(this).find(".sub_total").val());
-                total += sub_total;
-            });
-    
-            $("#total").val(total);
-        });
-    });
-</script>
 {% endblock %}
