--- a/prime_admin/templates/lms/earnings.html
+++ b/prime_admin/templates/lms/earnings.html
@@ -6,6 +6,8 @@
 {% block scripts %}
 <script>
     $(document).ready(function(){
+        $("#li_earnings").addClass('mm-active');
+
         $.ajaxSetup({
             beforeSend: function(xhr, settings) {
                 if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
